# lab2-WaldemarKarasev

cpp/: CMakeLists.txt
cpp/aggregator/: aggregator.cpp  aggregator.hpp  job_reporter.cpp  job_reporter.hpp  main.cpp  merge_tool.cpp  merge_tool.hpp
cpp/common/: CMakeLists.txt  app.cpp  app.hpp  message.cpp  message.hpp  rabbitmq_client.cpp  rabbitmq_client.hpp  text_processor.cpp  text_processor.hpp  text_utils.cpp  text_utils.hpp
cpp/common/thread_pool/: result_queue.hpp  submit.hpp  task.hpp  thread_pool.hpp
cpp/doc/: config.json  result.json  task.json
cpp/doc/results/: metric_id1764838147_w_1  metric_id1764838183_w_3  metric_id1764838202_w_5  metric_id1764838224_w_10  report_id_1764061220
cpp/orchestrator/: main.cpp  orchestrator.cpp  orchestrator.hpp
cpp/producer/: job_factory.cpp  job_factory.hpp  main.cpp
cpp/resources/: Shakespeare_shorten.txt  Shakespeare_shorten_2.txt  config.json  generator.py  text.txt
cpp/worker/: main.cpp  work.cpp  work.hpp  worker.cpp  worker.hpp
